FIX: 6v6 score calculator on mobile

--- a/css/calendar.css
+++ b/css/calendar.css
@@ -24,6 +24,8 @@
     align-items: center;
     justify-content: center;
     border: 1px solid #ccc;
+    -webkit-user-select: text;
+    user-select: all;
 }
 
 /* Adjust font size and abbreviate text on smaller screens */
